tests/cn/swap.c.test
return code: 2
cn/swap.c:4:9: warning: 'each' prefers a 'u64', but 'j' has type 'i32'.
   take pairStart = each (i32 j; 0i32 <= j && j < 2i32) {RW(array_shift(pair, j))};
        ^
cn/swap.c:6:10: warning: 'each' prefers a 'u64', but 'j' has type 'i32'.
    take pairEnd = each (i32 j; 0i32 <= j && j < 2i32) {RW(array_shift(pair, j))};
         ^
cn/swap.c:11:38: warning: 'focus' prefers a 'u64', but '0'i32' has type 'i32'.
    /*@ focus RW<unsigned long int>, 0i32; @*/
                                     ^
cn/swap.c:12:38: warning: 'focus' prefers a 'u64', but '1'i32' has type 'i32'.
    /*@ focus RW<unsigned long int>, 1i32; @*/
                                     ^
cn/swap.c:4:9: warning: 'each' prefers a 'u64', but 'j' has type 'i32'.
   take pairStart = each (i32 j; 0i32 <= j && j < 2i32) {RW(array_shift(pair, j))};
        ^
cn/swap.c:6:10: warning: 'each' prefers a 'u64', but 'j' has type 'i32'.
    take pairEnd = each (i32 j; 0i32 <= j && j < 2i32) {RW(array_shift(pair, j))};
         ^
cn/swap.c:4:9: warning: 'each' prefers a 'u64', but 'j' has type 'i32'.
   take pairStart = each (i32 j; 0i32 <= j && j < 2i32) {RW(array_shift(pair, j))};
        ^
cn/swap.c:6:10: warning: 'each' prefers a 'u64', but 'j' has type 'i32'.
    take pairEnd = each (i32 j; 0i32 <= j && j < 2i32) {RW(array_shift(pair, j))};
         ^
/tmp/run_tests.sh: line 35: unexpected EOF while looking for matching `"'
/tmp/run_tests.sh: line 45: syntax error: unexpected end of file
